--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv=“X-UA-Compatible” content=“IE=edge”>
     <meta name=“viewport” content=“width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel=“stylesheet” href=“/index.css”>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div class=“container”>
-        <div class=“loader”></div>
-    </div>
-    <div class=“div”></div>
-    <script src=“/index.js”></script>
+        <div class="loader">
+            <img src="loading.gif" alt="">
+        </div>
+    <div class="imageContainer div"></div>
+    <script src="./index.js"></script>
 </body>
 </html>
